Fixes for colors of switches and PostItemPlacehoder (title was not visible)

--- a/project1/src/App.css
+++ b/project1/src/App.css
@@ -1,41 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .special-box img {
   opacity: 0.2;
@@ -82,4 +44,23 @@
 
 .special-box:hover .btn-delete  {
   display: inline;
+}
+
+.form-check-input:checked {
+  background-color: black;
+  border-color: black;
+}
+
+/* .form-check-input:focus {
+  border-color: black;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(0 0 0 / 25%);
+} */
+
+.form-switch .form-check-input:focus {
+  background-image: url(data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%273%27 fill=%27%23000000%27%2F%3E%3C%2Fsvg%3E);
+}
+
+.form-switch .form-check-input:checked {
+  background-image: url(data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%273%27 fill=%27%23fff%27/%3e%3c/svg%3e);
 }
